@@ -1,3 +1,7 @@
+cocos2d-x-3.1-rc0 May.16 2014
+    [FIX]           Math: Vector2->Vec2, Vector3->Vec3, Vector4->Vec4, Matrix->Mat4
+    [FIX]           GLProgramState: Supports multitexturing
+
 cocos2d-x-3.1-alpha1 May.9 2014
     [NEW]           Animate: Dispatch a custom event after an animation frame is displayed
     [NEW]           GLProgram: Easy to customize uniforms and attributes by using the new class GLProgramState
